# GenAI_dev_work

./: README.md
langchain-project1/: .gitignore  main.py  pyproject.toml
